--- a/todolist/templates/todo/todo_form.html
+++ b/todolist/templates/todo/todo_form.html
@@ -11,7 +11,13 @@
 <form method="POST" action="{% url 'todo:create' %}">
   {% csrf_token %}
   {{ form|crispy }}
-  <button class="primaryAction btn btn-primary" type="submit">{% trans "Create" %}</button>
+  <button class="primaryAction btn btn-primary" type="submit">
+      {% if object.id %}
+        {% trans "Save" %}
+      {% else %}
+        {% trans "Create" %}
+      {% endif %}
+  </button>
 </form>
 
 {% endblock %}
