add buttons, truncate description, some fixes

--- a/todolist/static/css/main.css
+++ b/todolist/static/css/main.css
@@ -7,3 +7,10 @@ body {
     padding: 15px;
     margin: 0 auto;
 }
+
+.description {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 100px;
+}
