--- a/todolist/templates/todo/list.html
+++ b/todolist/templates/todo/list.html
@@ -3,8 +3,28 @@
 {% block title %}{% trans "List of Tasks" %}{% endblock title %}
 
 {% block content %}
+{% if todo_items %}
+<div class="list-group">
     {% for todo in todo_items %}
-         <a href="{{ todo.get_absolute_url  }}">{{ todo }}</a>
-         <a href="{% url 'todo:edit' todo.title %}">({% trans "edit" %})</a><br/>
+      <span class="list-group-item">
+        <h4 class="list-group-item-heading"><a href="{{ todo.get_absolute_url  }}">{{ todo }}</a></h4>
+        <p class="list-group-item-text description">{{ todo.description }}</p>
+        <hr />
+        <button type="button" class="btn btn-success btn-sm">
+            <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+        </button>
+        {% if todo.owner == request.user %}
+            <a href="{% url 'todo:edit' todo.id %}" class="btn btn-info btn-sm">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </a>
+            <button type="button" class="btn btn-danger btn-sm">
+                <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
+            </button>
+        {% endif %}
+      </span>
     {% endfor %}
+</div>
+{% else %}
+<div class="alert alert-info" role="alert">{% trans "No tasks here" %}</div>
+{% endif %}
 {% endblock %}
