--- a/todolist/templates/todo/todo_form.html
+++ b/todolist/templates/todo/todo_form.html
@@ -8,7 +8,7 @@
 <h1>{% trans "Create new ToDo" %}</h1>
 
 
-<form method="POST" action="{% url 'todo:create' %}">
+<form method="POST" action="">
   {% csrf_token %}
   {{ form|crispy }}
   <button class="primaryAction btn btn-primary" type="submit">
