--- a/todolist/templates/todo/list.html
+++ b/todolist/templates/todo/list.html
@@ -17,9 +17,9 @@
             <a href="{% url 'todo:edit' todo.id %}" class="btn btn-info btn-sm">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </a>
-            <button type="button" class="btn btn-danger btn-sm">
+            <a href="{% url 'todo:delete' todo.id %}" class="btn btn-danger btn-sm">
                 <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
-            </button>
+            </a>
         {% endif %}
       </span>
     {% endfor %}
