--- a/todolist/templates/base.html
+++ b/todolist/templates/base.html
@@ -55,6 +55,12 @@
         </div>
       </nav>
     <div class="container">
+    {% for message in messages %}
+        <div class="alert alert{% if message.tags %}-{{ message.tags }}{% endif %} alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          {{ message }}
+        </div>
+    {% endfor %}
     {% block content %}
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
