--- a/todolist/static/css/main.css
+++ b/todolist/static/css/main.css
@@ -8,11 +8,8 @@ body {
     margin: 0 auto;
 }
 
-.description {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-height: 100px;
+.list-group {
+    word-wrap: break-word;
 }
 
 .list-group span.disabled h4 {
