--- a/todolist/templates/todo/list.html
+++ b/todolist/templates/todo/list.html
@@ -3,69 +3,91 @@
 {% block title %}{% trans "List of Tasks" %}{% endblock title %}
 
 {% block content %}
+    <div class="panel panel-default text-center">
+        <div class="panel-body">
+            {% if request.session.hide_done == "True" %}
+                <a href="?hide_done=False" class='btn btn-success btn-lg'>{% trans "Show Completed tasks" %}</a>
+            {% else %}
+                <a href="?hide_done=True" class='btn btn-success btn-lg'>{% trans "Hide Completed tasks" %}</a>
+            {% endif %}
+        </div>
+    </div>
     {% if todo_items %}
         <div class="list-group">
             {% for todo in todo_items %}
               <span class="list-group-item{% if todo.is_done %} disabled{% endif %}">
+                <small class='pull-right'>{% trans "Created by" %} {{ todo.owner }} {% trans "on" %} {{ todo.created|date }}</small>
                 <h4 class="list-group-item-heading"><a href="{{ todo.get_absolute_url  }}">{{ todo }}</a></h4>
-                <p class="list-group-item-text description">{{ todo.description }}</p>
+                <span class="list-group-item-text description">{{ todo.description|truncatewords:100 }}</span>
                 <hr />
-                <button type="button" class="btn btn-{% if todo.is_done %}danger{% else %}success{% endif %} btn-sm todo-button"
-                onclick="switch_todo_status(this, {{ todo.id }})">
-                    <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-                </button>
+                {% if todo.is_done %}
+                    <p>{% trans "Done by:" %} {{ todo.done_by|default:todo.owner }}</p>
+                {% else %}
+                    <button type="button" class="btn btn-success btn-sm todo-button"
+                    onclick="switch_todo_status(this, {{ todo.id }})">
+                        {% trans "Done" %} <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+                    </button>
+                {% endif %}
+
                 {% if todo.owner == request.user %}
                     <a href="{% url 'todo:edit' todo.id %}" class="btn btn-info btn-sm">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        {% trans "Edit" %} <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
                     <a href="{% url 'todo:delete' todo.id %}" class="btn btn-danger btn-sm">
-                        <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
+                        {% trans "Delete" %} <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                     </a>
                 {% endif %}
               </span>
             {% endfor %}
+            {% if is_paginated %}
+                <nav aria-label="...">
+                  <ul class="pager">
+                    <li class="previous">
+                        {% if page_obj.has_previous %}
+                            <a href="{% url 'todo:home' %}?page={{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> {% trans "Previous" %}</a>
+                        {% endif %}
+                    </li>
+                    <li class="next">
+                        {% if page_obj.has_next %}
+                            <a href="{% url 'todo:home' %}?page={{ page_obj.next_page_number }}">{% trans "Next" %} <span aria-hidden="true">&rarr;</span></a>
+                        {% endif %}
+                    </li>
+                  </ul>
+                </nav>
+            {% endif %}
         </div>
     {% else %}
-        <div class="alert alert-info" role="alert">{% trans "No tasks here" %}</div>
+        <div class="alert alert-warning" role="alert">
+            {% trans "Sorry, no ToDo's here, you can" %} <a href="{% url 'todo:create' %}">{% trans "create one" %}</a>
+        </div>
     {% endif %}
 {% endblock %}
 
 {% block javascript %}
     {{ block.super }}
-    <script type="text/javascript">
-    $(document).ready(function() {
-        $.ajaxSetup({
-            beforeSend: function(xhr, settings) {
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", Cookies.get('csrftoken'));
-                }
-            }
-        });
-        $('.todo-button').click(function() {
-            var todo_id = $(this).parent().data('todo-id');
 
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $.ajaxSetup({
+                beforeSend: function(xhr, settings) {
+                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", Cookies.get('csrftoken'));
+                    }
+                }
+            });
         });
-    });
-    function switch_todo_status(el, todo_id) {
-        var $button = $(el);
-        var message;
-        var noty_type;
-        $.post("{% url 'todo:status_switch' %}", {'id': todo_id}, function( data ) {
-            if (data.is_done){
-                $button.removeClass('btn-success');
-                $button.addClass('btn-danger');
+        function switch_todo_status(el, todo_id) {
+            var $button = $(el);
+            $.post("{% url 'todo:status_switch' %}", {'id': todo_id}, function(data) {
                 $button.parent().addClass('disabled');
-                message = "{% trans 'Todo marked as done' %}";
-                noty_type = 'success';
-            } else {
-                $button.addClass('btn-success');
-                $button.removeClass('btn-danger');
-                $button.parent().removeClass('disabled');
-                message = "{% trans 'Todo marked as undone' %}";
-                noty_type = 'error';
-            }
-            $.notify(message, {position:"bottom right", className: noty_type});
-        });
-    };
+                $button.before('<p>{% trans "Done by" %}: ' + data.done_by + '</p>');
+                $button.remove();
+                if (data.is_done){
+                    $.notify("{% trans 'Todo marked as done' %}", {position:"bottom right", className: 'success'});
+                } else {
+                    $.notify("{% trans 'Sorry, this todo already done by' %} " + data.done_by, {position:"bottom right", className: 'error'});
+                }
+            });
+        };
     </script>
 {% endblock %}
