--- a/todolist/templates/todo/list.html
+++ b/todolist/templates/todo/list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="panel panel-default text-center">
         <div class="panel-body">
-            {% if request.session.hide_done == "True" %}
+            {% if request.session.hide_done %}
                 <a href="?hide_done=False" class='btn btn-success btn-lg'>{% trans "Show Completed tasks" %}</a>
             {% else %}
                 <a href="?hide_done=True" class='btn btn-success btn-lg'>{% trans "Hide Completed tasks" %}</a>
@@ -78,7 +78,7 @@
         });
         function switch_todo_status(el, todo_id) {
             var $button = $(el);
-            $.post("{% url 'todo:status_switch' %}", {'id': todo_id}, function(data) {
+            $.post("{% url 'todo:mark_done' %}", {'id': todo_id}, function(data) {
                 $button.parent().addClass('disabled');
                 $button.before('<p>{% trans "Done by" %}: ' + data.done_by + '</p>');
                 $button.remove();
